--- a/caseStudyWP/09-appendixsamSim.Rmd
+++ b/caseStudyWP/09-appendixsamSim.Rmd
@@ -32,8 +32,8 @@ $n$ & Nation: U.S. or Canada \\
 
 \begin{table}[ht]
 \centering
-\caption{List of samSim model variables.}
-\begin{tabular}{l l}
+\caption{List of samSim model parameters and user input variables.}
+\begin{tabular}{l p{12cm}}
 \hline
 Notation & Definition \\ 
 \hline
@@ -41,6 +41,8 @@ $\alpha_{i}$ & Ricker productivity parameter \\
 $\beta_{i}$ & Ricker inverse capacity parameter \\
 $\sigma_{i}$ & Standard deviation for recruitment error\\ 
 $\overline{ER}_{n}$ & Aggregate average exploitation rate for each nation\\
+$\overline{mat}_{j,i}$& average proportions of mature fish at age \\ 
+$\tau_i$ & Multivariate logistic variability parameter for maturity error\\
 \hline
 \end{tabular}
 (\#tab:paramtab)
@@ -175,7 +177,7 @@ When Recruitment data is not available, the 'nPrime' is set to 10 times the maxi
 The spawner recruitment parameters can be adjusted according to the user defined scenarios. samSim includes options to adjust the productivity parameter, $\alpha_{i}$, the capacity parameter $\beta_{i}$, and the recruitment standard deviations, $\sigma_{i}$. The LRP case studies do not include adjustments or changes in productivity over time, therefore we will not describe the parameter adjustment options in in this report. Recruitment is assumed to be correlated between the CU's, the covariance matrix is calculated based on the variance-covariance matrix and the correlation matrix specified by the user.   
  
 
-Once parameters are defined the number of spawners, $S_{y,i}$, is initialized. The number of spawners is set at equilibrium for the first 6 years and then calculated based on recruitment  and exploitation rates in the previous years (equation \@ref(eq:Seqinit)). If the calculated number of spawners is lower than the user inputted extinction threshold, then the number of spawners is set o zero. Recruitment error is given by a multivariate normal distribution reflecting the recruitment covariance among CUs. 
+Once parameters are defined the number of spawners, $S_{y,i}$, is initialized. The number of spawners is set at equilibrium for the first 6 years and then calculated based on recruitment  and exploitation rates in the previous years (Equation \@ref(eq:Seqinit)). If the calculated number of spawners is lower than the user inputted extinction threshold, then the number of spawners is set o zero. Recruitment error is given by a multivariate normal distribution reflecting the recruitment covariance among CUs. 
 
 \begin{align}
   S_{y<=6,i} &= \frac{\alpha_{i}}{\beta_{i}} \\
@@ -184,8 +186,12 @@ Once parameters are defined the number of spawners, $S_{y,i}$, is initialized. T
 \end{align}
 
 
-The age structure of the population is then calculated based on the mean age structure for each CU given by the user and random variability following a multivariate logistic error structure (@schnute_influence_1995). The age structure error can vary or be held constant among CUs. 
+The age structure of the population is computed following a multivariate logistic error structure based on the long term average age structure for each CU, $\overline{mat}_{i}$ and the CU-specific variability parameter $\tau_i$ (@schnute_influence_1995) (Equation \@ref(eq:mat). The age structure error can vary or be held constant among CUs. 
 
+\begin{align}
+  mat_{y,i} \sim \text{Multivariate Logistic}(\overline{mat}_{j,i},\tau_{i}) \\
+  (\#eq:mat)
+\end{align}
 
 The following step is to compute recruitment following the recruitment curve specified by the user. For the LRP version of samSim, three versions of the recruitment curve are available: A simple Ricker curve (equation \@ref(eq:Rickersimple) with $\rho = 0$), Ricker curve with temporal autocorrelation in recruitment error (equation \@ref(eq:Rickersimple)), and Ricker curve with freshwater survival covariate (equation \@ref(eq:Rickersurv)). Recruitment error is assumed to be correlated among CUs for all versions of the Ricker curve. Random recruitment deviates can be generated with multivariate t or multivariate normal distributions, that can be symmetric or skewed. The study cases used in this report all assume that recruitment deviates come from a symmetrical multivariate normal distribution (Equation \@ref(eq:CUautocorr)). 
 
